# thesis

./: .gitignore  .gitmodules  LICENSE  README.md  package-lock.json  package.json
.github/: labeler.yml
.github/workflows/: ci-cd.yml
analysis/: .coverage  README.md  pyproject.toml
analysis/src/: __init__.py  apisguru_description.ipynb  data_analysis.ipynb  main.py
analysis/src/communication/: __init__.py  df_loader.py  logging_info.py  plot_exporter.py
analysis/src/config/: ruleconfig.json
analysis/src/hello_world/: __init__.py  hello_world.py
analysis/src/plot/: __init__.py  clusterprioritizedscatter.py  multitriggerboxplot.py  multitriggerthrownvspossible.py  operationsperspec.py  priodistrhist.py  ruleseverityreassignments.py  rulesimilaritydendrogram.py  specificationsperdomain.py  totalspecsthatthrow.py  violationsonazureexcluded.py
analysis/src/table/: __init__.py  describetotalnumbers.py  findnoviolations.py  groupedprioritizedrules.py  inversionmultitrigger.py  prioritizeinversefrequencescore.py  prioritizemultipleweighed.py  prioritizeruletriggerdiversity.py  singletriggermean.py  totalthrownrules.py  violationpartitionazure.py
analysis/test/: conftest.py
analysis/test/communication/: df_loader_test.py  logging_info_test.py  plot_exporter_test.py
analysis/test/hello_world/: hello_world_test.py
data/: README.md
data/analysis-results/: 2024-09-20@0a578149ea1db7224a1cb14801c45f780e185385.txt  2024-09-20@412ba35da7b957c4457f4f28cb82f97a709094ba.txt  2024-09-20@717843a87f684c3ae058510e53d412464c082908.txt  (+26 more)
requirements/: README.md
requirements/szenario/: main.md
script/: export_diagrams.sh  sync_zotero.sh
tex/: README.md  defense.tex  expose.tex  main.tex  meta.tex  references.bib  thesis.tex
tool/: README.md  package-lock.json  package.json  tsconfig.json
(+90 files in other folders)
